@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+2/14/17
+ - added Scintillation in the process catalogue. Added verbosity condition to print not catalogue pro
+
 2/9/17
  - added "mother" and "hitType" fields in cad.gxml
 
